#16 Fixed data table bleeding issue, and minor UI improvements

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,17 @@
 body {
-    width: 60%;
-    background: #f5f5f5;
-    margin-left: auto;
-    margin-right: auto;
+    font: 90%/1.45em "Helvetica Neue",HelveticaNeue,Helvetica,Arial,sans-serif !important;
+    font-size: 90% !important;
+    line-height: 1.45em !important;
+    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif !important;
+    margin: 0;
+    padding: 0;
+    color: #333;
+    background-color: #f5f5f5;
+    position: relative;
+    height: auto !important;
+    min-height: 100%;
+    box-sizing: border-box;
+    -webkit-font-smoothing: inherit;
 }
 
 body * {
